// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessLayout should match snapshot for login mode 1`] = `
<RNCSafeAreaView
  accessibilityHint="Login screen"
  accessibilityLabel="Login screen"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "padding": 24,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
          }
        }
      >
        <Text
          accessibilityLabel="Hello"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "variants": {
                  "align": {
                    "center": {
                      "textAlign": "center",
                    },
                    "justify": {
                      "textAlign": "justify",
                    },
                    "left": {
                      "textAlign": "left",
                    },
                    "right": {
                      "textAlign": "right",
                    },
                  },
                  "color": {
                    "accent": {
                      "color": "#1877F2",
                    },
                    "disabled": {
                      "color": "#B0B3B8",
                    },
                    "error": {
                      "color": "#ED2E7E",
                    },
                    "errorHover": {
                      "color": "#C30052",
                    },
                    "link": {
                      "color": "#1877F2",
                    },
                    "onPrimary": {
                      "color": "#FFFFFF",
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                    },
                    "primary": {
                      "color": "#050505",
                    },
                    "secondary": {
                      "color": "#4E4B66",
                    },
                    "success": {
                      "color": "#00BA88",
                    },
                    "successHover": {
                      "color": "#00966D",
                    },
                    "tertiary": {
                      "color": "#667080",
                    },
                    "warning": {
                      "color": "#F4B740",
                    },
                    "warningHover": {
                      "color": "#946200",
                    },
                  },
                  "decoration": {
                    "lineThrough": {
                      "textDecorationLine": "line-through",
                    },
                    "none": {
                      "textDecorationLine": "none",
                    },
                    "underline": {
                      "textDecorationLine": "underline",
                    },
                    "underlineLineThrough": {
                      "textDecorationLine": "underline line-through",
                    },
                  },
                  "textTransform": {
                    "capitalize": {
                      "textTransform": "capitalize",
                    },
                    "lowercase": {
                      "textTransform": "lowercase",
                    },
                    "none": {
                      "textTransform": "none",
                    },
                    "uppercase": {
                      "textTransform": "uppercase",
                    },
                  },
                  "variant": {
                    "body": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    "bodyLg": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 18,
                      "fontWeight": "400",
                      "lineHeight": 28,
                    },
                    "bodySm": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "lineHeight": 20,
                    },
                    "button": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": 0.12,
                      "lineHeight": 24,
                    },
                    "caption": {
                      "color": "#4E4B66",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    "display": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 48,
                      "fontWeight": "700",
                      "lineHeight": 56,
                    },
                    "h1": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 32,
                      "fontWeight": "700",
                      "lineHeight": 40,
                    },
                    "h2": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 24,
                      "fontWeight": "700",
                      "lineHeight": 32,
                    },
                    "h3": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 20,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h4": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h5": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "lineHeight": 24,
                    },
                    "label": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                  },
                },
              },
              {
                "color": "#050505",
              },
            ]
          }
        >
          Hello
        </Text>
        <Text
          accessibilityLabel="Again!"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "variants": {
                  "align": {
                    "center": {
                      "textAlign": "center",
                    },
                    "justify": {
                      "textAlign": "justify",
                    },
                    "left": {
                      "textAlign": "left",
                    },
                    "right": {
                      "textAlign": "right",
                    },
                  },
                  "color": {
                    "accent": {
                      "color": "#1877F2",
                    },
                    "disabled": {
                      "color": "#B0B3B8",
                    },
                    "error": {
                      "color": "#ED2E7E",
                    },
                    "errorHover": {
                      "color": "#C30052",
                    },
                    "link": {
                      "color": "#1877F2",
                    },
                    "onPrimary": {
                      "color": "#FFFFFF",
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                    },
                    "primary": {
                      "color": "#050505",
                    },
                    "secondary": {
                      "color": "#4E4B66",
                    },
                    "success": {
                      "color": "#00BA88",
                    },
                    "successHover": {
                      "color": "#00966D",
                    },
                    "tertiary": {
                      "color": "#667080",
                    },
                    "warning": {
                      "color": "#F4B740",
                    },
                    "warningHover": {
                      "color": "#946200",
                    },
                  },
                  "decoration": {
                    "lineThrough": {
                      "textDecorationLine": "line-through",
                    },
                    "none": {
                      "textDecorationLine": "none",
                    },
                    "underline": {
                      "textDecorationLine": "underline",
                    },
                    "underlineLineThrough": {
                      "textDecorationLine": "underline line-through",
                    },
                  },
                  "textTransform": {
                    "capitalize": {
                      "textTransform": "capitalize",
                    },
                    "lowercase": {
                      "textTransform": "lowercase",
                    },
                    "none": {
                      "textTransform": "none",
                    },
                    "uppercase": {
                      "textTransform": "uppercase",
                    },
                  },
                  "variant": {
                    "body": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    "bodyLg": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 18,
                      "fontWeight": "400",
                      "lineHeight": 28,
                    },
                    "bodySm": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "lineHeight": 20,
                    },
                    "button": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": 0.12,
                      "lineHeight": 24,
                    },
                    "caption": {
                      "color": "#4E4B66",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    "display": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 48,
                      "fontWeight": "700",
                      "lineHeight": 56,
                    },
                    "h1": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 32,
                      "fontWeight": "700",
                      "lineHeight": 40,
                    },
                    "h2": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 24,
                      "fontWeight": "700",
                      "lineHeight": 32,
                    },
                    "h3": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 20,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h4": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h5": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "lineHeight": 24,
                    },
                    "label": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                  },
                },
              },
              {
                "color": "#1877F2",
              },
            ]
          }
        >
          Again!
        </Text>
      </View>
      <Text
        accessibilityLabel="Welcome back you've been missed"
        accessibilityRole="text"
        accessible={true}
        style={
          [
            {
              "variants": {
                "align": {
                  "center": {
                    "textAlign": "center",
                  },
                  "justify": {
                    "textAlign": "justify",
                  },
                  "left": {
                    "textAlign": "left",
                  },
                  "right": {
                    "textAlign": "right",
                  },
                },
                "color": {
                  "accent": {
                    "color": "#1877F2",
                  },
                  "disabled": {
                    "color": "#B0B3B8",
                  },
                  "error": {
                    "color": "#ED2E7E",
                  },
                  "errorHover": {
                    "color": "#C30052",
                  },
                  "link": {
                    "color": "#1877F2",
                  },
                  "onPrimary": {
                    "color": "#FFFFFF",
                  },
                  "placeholder": {
                    "color": "#B0B3B8",
                  },
                  "primary": {
                    "color": "#050505",
                  },
                  "secondary": {
                    "color": "#4E4B66",
                  },
                  "success": {
                    "color": "#00BA88",
                  },
                  "successHover": {
                    "color": "#00966D",
                  },
                  "tertiary": {
                    "color": "#667080",
                  },
                  "warning": {
                    "color": "#F4B740",
                  },
                  "warningHover": {
                    "color": "#946200",
                  },
                },
                "decoration": {
                  "lineThrough": {
                    "textDecorationLine": "line-through",
                  },
                  "none": {
                    "textDecorationLine": "none",
                  },
                  "underline": {
                    "textDecorationLine": "underline",
                  },
                  "underlineLineThrough": {
                    "textDecorationLine": "underline line-through",
                  },
                },
                "textTransform": {
                  "capitalize": {
                    "textTransform": "capitalize",
                  },
                  "lowercase": {
                    "textTransform": "lowercase",
                  },
                  "none": {
                    "textTransform": "none",
                  },
                  "uppercase": {
                    "textTransform": "uppercase",
                  },
                },
                "variant": {
                  "body": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  "bodyLg": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 18,
                    "fontWeight": "400",
                    "lineHeight": 28,
                  },
                  "bodySm": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  "button": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontWeight": "600",
                    "letterSpacing": 0.12,
                    "lineHeight": 24,
                  },
                  "caption": {
                    "color": "#4E4B66",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 16,
                  },
                  "display": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 48,
                    "fontWeight": "700",
                    "lineHeight": 56,
                  },
                  "h1": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 32,
                    "fontWeight": "700",
                    "lineHeight": 40,
                  },
                  "h2": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 24,
                    "fontWeight": "700",
                    "lineHeight": 32,
                  },
                  "h3": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 20,
                    "fontWeight": "600",
                    "lineHeight": 28,
                  },
                  "h4": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "lineHeight": 28,
                  },
                  "h5": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  "label": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  "placeholder": {
                    "color": "#B0B3B8",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                },
              },
            },
            {
              "marginBottom": 32,
              "maxWidth": 220,
            },
          ]
        }
      >
        Welcome back you've been missed
      </Text>
      <View
        style={
          {
            "gap": 16,
          }
        }
      >
        <Text>
          Login Form
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
              "marginTop": 8,
            }
          }
        >
          <Text
            accessibilityLabel="don't have an account ?"
            accessibilityRole="text"
            accessible={true}
            style={
              [
                {
                  "variants": {
                    "align": {
                      "center": {
                        "textAlign": "center",
                      },
                      "justify": {
                        "textAlign": "justify",
                      },
                      "left": {
                        "textAlign": "left",
                      },
                      "right": {
                        "textAlign": "right",
                      },
                    },
                    "color": {
                      "accent": {
                        "color": "#1877F2",
                      },
                      "disabled": {
                        "color": "#B0B3B8",
                      },
                      "error": {
                        "color": "#ED2E7E",
                      },
                      "errorHover": {
                        "color": "#C30052",
                      },
                      "link": {
                        "color": "#1877F2",
                      },
                      "onPrimary": {
                        "color": "#FFFFFF",
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                      },
                      "primary": {
                        "color": "#050505",
                      },
                      "secondary": {
                        "color": "#4E4B66",
                      },
                      "success": {
                        "color": "#00BA88",
                      },
                      "successHover": {
                        "color": "#00966D",
                      },
                      "tertiary": {
                        "color": "#667080",
                      },
                      "warning": {
                        "color": "#F4B740",
                      },
                      "warningHover": {
                        "color": "#946200",
                      },
                    },
                    "decoration": {
                      "lineThrough": {
                        "textDecorationLine": "line-through",
                      },
                      "none": {
                        "textDecorationLine": "none",
                      },
                      "underline": {
                        "textDecorationLine": "underline",
                      },
                      "underlineLineThrough": {
                        "textDecorationLine": "underline line-through",
                      },
                    },
                    "textTransform": {
                      "capitalize": {
                        "textTransform": "capitalize",
                      },
                      "lowercase": {
                        "textTransform": "lowercase",
                      },
                      "none": {
                        "textTransform": "none",
                      },
                      "uppercase": {
                        "textTransform": "uppercase",
                      },
                    },
                    "variant": {
                      "body": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      "bodyLg": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 18,
                        "fontWeight": "400",
                        "lineHeight": 28,
                      },
                      "bodySm": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "button": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "letterSpacing": 0.12,
                        "lineHeight": 24,
                      },
                      "caption": {
                        "color": "#4E4B66",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 16,
                      },
                      "display": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 48,
                        "fontWeight": "700",
                        "lineHeight": 56,
                      },
                      "h1": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 32,
                        "fontWeight": "700",
                        "lineHeight": 40,
                      },
                      "h2": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 24,
                        "fontWeight": "700",
                        "lineHeight": 32,
                      },
                      "h3": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 20,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h4": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h5": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      "label": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                    },
                  },
                },
                undefined,
              ]
            }
          >
            don't have an account ?
          </Text>
          <View
            accessibilityHint="Navigates to the Sign up screen"
            accessibilityLabel="Sign up"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            href="/signup"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="link"
          >
            <Text
              accessibilityLabel="Sign up"
              accessibilityRole="text"
              accessible={true}
              style={
                [
                  {
                    "variants": {
                      "align": {
                        "center": {
                          "textAlign": "center",
                        },
                        "justify": {
                          "textAlign": "justify",
                        },
                        "left": {
                          "textAlign": "left",
                        },
                        "right": {
                          "textAlign": "right",
                        },
                      },
                      "color": {
                        "accent": {
                          "color": "#1877F2",
                        },
                        "disabled": {
                          "color": "#B0B3B8",
                        },
                        "error": {
                          "color": "#ED2E7E",
                        },
                        "errorHover": {
                          "color": "#C30052",
                        },
                        "link": {
                          "color": "#1877F2",
                        },
                        "onPrimary": {
                          "color": "#FFFFFF",
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                        },
                        "primary": {
                          "color": "#050505",
                        },
                        "secondary": {
                          "color": "#4E4B66",
                        },
                        "success": {
                          "color": "#00BA88",
                        },
                        "successHover": {
                          "color": "#00966D",
                        },
                        "tertiary": {
                          "color": "#667080",
                        },
                        "warning": {
                          "color": "#F4B740",
                        },
                        "warningHover": {
                          "color": "#946200",
                        },
                      },
                      "decoration": {
                        "lineThrough": {
                          "textDecorationLine": "line-through",
                        },
                        "none": {
                          "textDecorationLine": "none",
                        },
                        "underline": {
                          "textDecorationLine": "underline",
                        },
                        "underlineLineThrough": {
                          "textDecorationLine": "underline line-through",
                        },
                      },
                      "textTransform": {
                        "capitalize": {
                          "textTransform": "capitalize",
                        },
                        "lowercase": {
                          "textTransform": "lowercase",
                        },
                        "none": {
                          "textTransform": "none",
                        },
                        "uppercase": {
                          "textTransform": "uppercase",
                        },
                      },
                      "variant": {
                        "body": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                        "bodyLg": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "lineHeight": 28,
                        },
                        "bodySm": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "button": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0.12,
                          "lineHeight": 24,
                        },
                        "caption": {
                          "color": "#4E4B66",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                        },
                        "display": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 48,
                          "fontWeight": "700",
                          "lineHeight": 56,
                        },
                        "h1": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 32,
                          "fontWeight": "700",
                          "lineHeight": 40,
                        },
                        "h2": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 24,
                          "fontWeight": "700",
                          "lineHeight": 32,
                        },
                        "h3": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 20,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h4": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 18,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h5": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "lineHeight": 24,
                        },
                        "label": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 14,
                          "fontWeight": "600",
                          "lineHeight": 20,
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                      },
                    },
                  },
                  undefined,
                ]
              }
            >
              Sign up
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccessLayout should match snapshot for signup mode 1`] = `
<RNCSafeAreaView
  accessibilityHint="Sign up screen"
  accessibilityLabel="Sign up screen"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "padding": 24,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "column",
            "gap": 4,
            "marginBottom": 4,
          }
        }
      >
        <Text
          accessibilityLabel="Hello!"
          accessibilityRole="text"
          accessible={true}
          style={
            [
              {
                "variants": {
                  "align": {
                    "center": {
                      "textAlign": "center",
                    },
                    "justify": {
                      "textAlign": "justify",
                    },
                    "left": {
                      "textAlign": "left",
                    },
                    "right": {
                      "textAlign": "right",
                    },
                  },
                  "color": {
                    "accent": {
                      "color": "#1877F2",
                    },
                    "disabled": {
                      "color": "#B0B3B8",
                    },
                    "error": {
                      "color": "#ED2E7E",
                    },
                    "errorHover": {
                      "color": "#C30052",
                    },
                    "link": {
                      "color": "#1877F2",
                    },
                    "onPrimary": {
                      "color": "#FFFFFF",
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                    },
                    "primary": {
                      "color": "#050505",
                    },
                    "secondary": {
                      "color": "#4E4B66",
                    },
                    "success": {
                      "color": "#00BA88",
                    },
                    "successHover": {
                      "color": "#00966D",
                    },
                    "tertiary": {
                      "color": "#667080",
                    },
                    "warning": {
                      "color": "#F4B740",
                    },
                    "warningHover": {
                      "color": "#946200",
                    },
                  },
                  "decoration": {
                    "lineThrough": {
                      "textDecorationLine": "line-through",
                    },
                    "none": {
                      "textDecorationLine": "none",
                    },
                    "underline": {
                      "textDecorationLine": "underline",
                    },
                    "underlineLineThrough": {
                      "textDecorationLine": "underline line-through",
                    },
                  },
                  "textTransform": {
                    "capitalize": {
                      "textTransform": "capitalize",
                    },
                    "lowercase": {
                      "textTransform": "lowercase",
                    },
                    "none": {
                      "textTransform": "none",
                    },
                    "uppercase": {
                      "textTransform": "uppercase",
                    },
                  },
                  "variant": {
                    "body": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                    "bodyLg": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 18,
                      "fontWeight": "400",
                      "lineHeight": 28,
                    },
                    "bodySm": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "lineHeight": 20,
                    },
                    "button": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": 0.12,
                      "lineHeight": 24,
                    },
                    "caption": {
                      "color": "#4E4B66",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    "display": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 48,
                      "fontWeight": "700",
                      "lineHeight": 56,
                    },
                    "h1": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 32,
                      "fontWeight": "700",
                      "lineHeight": 40,
                    },
                    "h2": {
                      "color": "#050505",
                      "fontFamily": "Poppins-Bold",
                      "fontSize": 24,
                      "fontWeight": "700",
                      "lineHeight": 32,
                    },
                    "h3": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 20,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h4": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "lineHeight": 28,
                    },
                    "h5": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "lineHeight": 24,
                    },
                    "label": {
                      "color": "#050505",
                      "fontFamily": "Poppins-SemiBold",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    "placeholder": {
                      "color": "#B0B3B8",
                      "fontFamily": "Poppins-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                  },
                },
              },
              {
                "color": "#1877F2",
              },
            ]
          }
        >
          Hello!
        </Text>
      </View>
      <Text
        accessibilityLabel="Signup to get Started"
        accessibilityRole="text"
        accessible={true}
        style={
          [
            {
              "variants": {
                "align": {
                  "center": {
                    "textAlign": "center",
                  },
                  "justify": {
                    "textAlign": "justify",
                  },
                  "left": {
                    "textAlign": "left",
                  },
                  "right": {
                    "textAlign": "right",
                  },
                },
                "color": {
                  "accent": {
                    "color": "#1877F2",
                  },
                  "disabled": {
                    "color": "#B0B3B8",
                  },
                  "error": {
                    "color": "#ED2E7E",
                  },
                  "errorHover": {
                    "color": "#C30052",
                  },
                  "link": {
                    "color": "#1877F2",
                  },
                  "onPrimary": {
                    "color": "#FFFFFF",
                  },
                  "placeholder": {
                    "color": "#B0B3B8",
                  },
                  "primary": {
                    "color": "#050505",
                  },
                  "secondary": {
                    "color": "#4E4B66",
                  },
                  "success": {
                    "color": "#00BA88",
                  },
                  "successHover": {
                    "color": "#00966D",
                  },
                  "tertiary": {
                    "color": "#667080",
                  },
                  "warning": {
                    "color": "#F4B740",
                  },
                  "warningHover": {
                    "color": "#946200",
                  },
                },
                "decoration": {
                  "lineThrough": {
                    "textDecorationLine": "line-through",
                  },
                  "none": {
                    "textDecorationLine": "none",
                  },
                  "underline": {
                    "textDecorationLine": "underline",
                  },
                  "underlineLineThrough": {
                    "textDecorationLine": "underline line-through",
                  },
                },
                "textTransform": {
                  "capitalize": {
                    "textTransform": "capitalize",
                  },
                  "lowercase": {
                    "textTransform": "lowercase",
                  },
                  "none": {
                    "textTransform": "none",
                  },
                  "uppercase": {
                    "textTransform": "uppercase",
                  },
                },
                "variant": {
                  "body": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  "bodyLg": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 18,
                    "fontWeight": "400",
                    "lineHeight": 28,
                  },
                  "bodySm": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  "button": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontWeight": "600",
                    "letterSpacing": 0.12,
                    "lineHeight": 24,
                  },
                  "caption": {
                    "color": "#4E4B66",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 16,
                  },
                  "display": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 48,
                    "fontWeight": "700",
                    "lineHeight": 56,
                  },
                  "h1": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 32,
                    "fontWeight": "700",
                    "lineHeight": 40,
                  },
                  "h2": {
                    "color": "#050505",
                    "fontFamily": "Poppins-Bold",
                    "fontSize": 24,
                    "fontWeight": "700",
                    "lineHeight": 32,
                  },
                  "h3": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 20,
                    "fontWeight": "600",
                    "lineHeight": 28,
                  },
                  "h4": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "lineHeight": 28,
                  },
                  "h5": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  "label": {
                    "color": "#050505",
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                  "placeholder": {
                    "color": "#B0B3B8",
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                },
              },
            },
            {
              "marginBottom": 32,
              "maxWidth": 220,
            },
          ]
        }
      >
        Signup to get Started
      </Text>
      <View
        style={
          {
            "gap": 16,
          }
        }
      >
        <Text>
          Signup Form
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
              "marginTop": 8,
            }
          }
        >
          <Text
            accessibilityLabel="Already have an account ?"
            accessibilityRole="text"
            accessible={true}
            style={
              [
                {
                  "variants": {
                    "align": {
                      "center": {
                        "textAlign": "center",
                      },
                      "justify": {
                        "textAlign": "justify",
                      },
                      "left": {
                        "textAlign": "left",
                      },
                      "right": {
                        "textAlign": "right",
                      },
                    },
                    "color": {
                      "accent": {
                        "color": "#1877F2",
                      },
                      "disabled": {
                        "color": "#B0B3B8",
                      },
                      "error": {
                        "color": "#ED2E7E",
                      },
                      "errorHover": {
                        "color": "#C30052",
                      },
                      "link": {
                        "color": "#1877F2",
                      },
                      "onPrimary": {
                        "color": "#FFFFFF",
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                      },
                      "primary": {
                        "color": "#050505",
                      },
                      "secondary": {
                        "color": "#4E4B66",
                      },
                      "success": {
                        "color": "#00BA88",
                      },
                      "successHover": {
                        "color": "#00966D",
                      },
                      "tertiary": {
                        "color": "#667080",
                      },
                      "warning": {
                        "color": "#F4B740",
                      },
                      "warningHover": {
                        "color": "#946200",
                      },
                    },
                    "decoration": {
                      "lineThrough": {
                        "textDecorationLine": "line-through",
                      },
                      "none": {
                        "textDecorationLine": "none",
                      },
                      "underline": {
                        "textDecorationLine": "underline",
                      },
                      "underlineLineThrough": {
                        "textDecorationLine": "underline line-through",
                      },
                    },
                    "textTransform": {
                      "capitalize": {
                        "textTransform": "capitalize",
                      },
                      "lowercase": {
                        "textTransform": "lowercase",
                      },
                      "none": {
                        "textTransform": "none",
                      },
                      "uppercase": {
                        "textTransform": "uppercase",
                      },
                    },
                    "variant": {
                      "body": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                      "bodyLg": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 18,
                        "fontWeight": "400",
                        "lineHeight": 28,
                      },
                      "bodySm": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                      },
                      "button": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "letterSpacing": 0.12,
                        "lineHeight": 24,
                      },
                      "caption": {
                        "color": "#4E4B66",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "lineHeight": 16,
                      },
                      "display": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 48,
                        "fontWeight": "700",
                        "lineHeight": 56,
                      },
                      "h1": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 32,
                        "fontWeight": "700",
                        "lineHeight": 40,
                      },
                      "h2": {
                        "color": "#050505",
                        "fontFamily": "Poppins-Bold",
                        "fontSize": 24,
                        "fontWeight": "700",
                        "lineHeight": 32,
                      },
                      "h3": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 20,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h4": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "lineHeight": 28,
                      },
                      "h5": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      "label": {
                        "color": "#050505",
                        "fontFamily": "Poppins-SemiBold",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                      "placeholder": {
                        "color": "#B0B3B8",
                        "fontFamily": "Poppins-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                      },
                    },
                  },
                },
                undefined,
              ]
            }
          >
            Already have an account ?
          </Text>
          <View
            accessibilityHint="Navigates to the Login screen"
            accessibilityLabel="Login"
            accessibilityRole="link"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            href="/login"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="link"
          >
            <Text
              accessibilityLabel="Login"
              accessibilityRole="text"
              accessible={true}
              style={
                [
                  {
                    "variants": {
                      "align": {
                        "center": {
                          "textAlign": "center",
                        },
                        "justify": {
                          "textAlign": "justify",
                        },
                        "left": {
                          "textAlign": "left",
                        },
                        "right": {
                          "textAlign": "right",
                        },
                      },
                      "color": {
                        "accent": {
                          "color": "#1877F2",
                        },
                        "disabled": {
                          "color": "#B0B3B8",
                        },
                        "error": {
                          "color": "#ED2E7E",
                        },
                        "errorHover": {
                          "color": "#C30052",
                        },
                        "link": {
                          "color": "#1877F2",
                        },
                        "onPrimary": {
                          "color": "#FFFFFF",
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                        },
                        "primary": {
                          "color": "#050505",
                        },
                        "secondary": {
                          "color": "#4E4B66",
                        },
                        "success": {
                          "color": "#00BA88",
                        },
                        "successHover": {
                          "color": "#00966D",
                        },
                        "tertiary": {
                          "color": "#667080",
                        },
                        "warning": {
                          "color": "#F4B740",
                        },
                        "warningHover": {
                          "color": "#946200",
                        },
                      },
                      "decoration": {
                        "lineThrough": {
                          "textDecorationLine": "line-through",
                        },
                        "none": {
                          "textDecorationLine": "none",
                        },
                        "underline": {
                          "textDecorationLine": "underline",
                        },
                        "underlineLineThrough": {
                          "textDecorationLine": "underline line-through",
                        },
                      },
                      "textTransform": {
                        "capitalize": {
                          "textTransform": "capitalize",
                        },
                        "lowercase": {
                          "textTransform": "lowercase",
                        },
                        "none": {
                          "textTransform": "none",
                        },
                        "uppercase": {
                          "textTransform": "uppercase",
                        },
                      },
                      "variant": {
                        "body": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                        "bodyLg": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "lineHeight": 28,
                        },
                        "bodySm": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 14,
                          "fontWeight": "400",
                          "lineHeight": 20,
                        },
                        "button": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "letterSpacing": 0.12,
                          "lineHeight": 24,
                        },
                        "caption": {
                          "color": "#4E4B66",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 12,
                          "fontWeight": "400",
                          "lineHeight": 16,
                        },
                        "display": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 48,
                          "fontWeight": "700",
                          "lineHeight": 56,
                        },
                        "h1": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 32,
                          "fontWeight": "700",
                          "lineHeight": 40,
                        },
                        "h2": {
                          "color": "#050505",
                          "fontFamily": "Poppins-Bold",
                          "fontSize": 24,
                          "fontWeight": "700",
                          "lineHeight": 32,
                        },
                        "h3": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 20,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h4": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 18,
                          "fontWeight": "600",
                          "lineHeight": 28,
                        },
                        "h5": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 16,
                          "fontWeight": "600",
                          "lineHeight": 24,
                        },
                        "label": {
                          "color": "#050505",
                          "fontFamily": "Poppins-SemiBold",
                          "fontSize": 14,
                          "fontWeight": "600",
                          "lineHeight": 20,
                        },
                        "placeholder": {
                          "color": "#B0B3B8",
                          "fontFamily": "Poppins-Regular",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "lineHeight": 24,
                        },
                      },
                    },
                  },
                  undefined,
                ]
              }
            >
              Login
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
